feat: Update p-limit dependency to v5.0.0
Updates the p-limit package to version 5.0.0 in both package.json and index.html. This ensures the application uses the latest stable version with potential performance or bug fixes.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gifenc": "1.0.3",
     "immer": "latest",
     "lodash.shuffle": "latest",
-    "p-limit": "latest",
+    "p-limit": "5.0.0",
     "react": "latest",
     "react-dom": "latest",
     "zustand": "latest"
